--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,18 @@
     <string name="pic">PIC</string>
     <string name="test">TEST</string>
     <string name="extrected_text">Extracted text:</string>
+    <string name="alterations">Alterations:</string>
+    <string name="view_alterations">View alterations</string>
+    <string name="username">Username</string>
+    <string name="hostname">Hostname</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="check_internet_connection">Check internet connection.</string>
+    <string name="no_permission_to_internal_storage">No permission to internal storage.</string>
+    <string name="bad_credentials_or_connection_reload_the_page_for_a_new_login">Bad Credentials or connection. Try again.</string>
+    <string name="homeFragmentTag">homefgm</string>
+    <string name="detailFragmentTag">detailfgm</string>
+    <string name="serializableObjectName">PhotoStructureObject</string>
+    <string name="galleryFragmentTitle">Gallery</string>
+    <string name="galleryDetailsFragmentTitle">Details</string>
 </resources>
